--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="UTF-8">
+    <title>Eric James Robinson Tutoring</title>
+    <meta name="viewport" content="user-scalable=no,width=500">
+    <link rel="stylesheet" href="/css/style.css">
+</head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
