--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <title>Eric James Robinson Tutoring</title>
     <meta name="viewport" content="user-scalable=no,width=500">
+    <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 <iframe id="schedulista-widget-00" src="https://www.schedulista.com/schedule/ejrtutoring?mode=widget" allowtransparency="false" frameborder="0" scrolling="no" width="100%" height="900px">text</iframe><script id="schedulista-widget-script-00" type="text/javascript" src="https://www.schedulista.com/schedule/ejrtutoring/widget.js"></script>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
