some structure, styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-<iframe id="schedulista-widget-00" src="https://www.schedulista.com/schedule/ejrtutoring?mode=widget" allowtransparency="false" frameborder="0" scrolling="no" width="100%" height="900px">text</iframe><script id="schedulista-widget-script-00" type="text/javascript" src="https://www.schedulista.com/schedule/ejrtutoring/widget.js"></script>
+
+    <h1>
+        General Chemistry I &amp; &amp; II Tutoring
+    </h1>
+
+    <iframe 
+        id="schedulista-widget-00" 
+        src="https://www.schedulista.com/schedule/ejrtutoring?mode=widget" 
+        allowtransparency="false" 
+        frameborder="0" 
+        scrolling="no" 
+        width="100%" 
+        height="900px"
+    ></iframe>
+    <script 
+        id="schedulista-widget-script-00" 
+        type="text/javascript" 
+        src="https://www.schedulista.com/schedule/ejrtutoring/widget.js"
+    ></script>
 </body>
 </html>
