some index.html modern components

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Eric James Robinson Tutoring</title>
+    <meta name="description" content="">
+
     <meta name="viewport" content="user-scalable=no,width=500">
+
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -27,5 +31,12 @@
         type="text/javascript" 
         src="https://www.schedulista.com/schedule/ejrtutoring/widget.js"
     ></script>
+
+    <!-- maxmcd: you probably want this -->
+    <script>
+        window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+        ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 </html>
