--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <h1>
-        General Chemistry I &amp; &amp; II Tutoring
+        General Chemistry I &amp; II Tutoring
     </h1>
 
     <iframe 
