--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <h1>
         General Chemistry I &amp; II Tutoring
     </h1>
-
+<a href='http://ejrtutoring.schedulista.com' target='_blank'>
+    <img alt='Schedule an Online Appointment' height='44px' src='http://www.schedulista.com/assets/schedule_button@2x.png' title='Schedule an Appointment Online'>
+    </a>
+    
     <iframe 
         id="schedulista-widget-00" 
         src="https://www.schedulista.com/schedule/ejrtutoring?mode=widget" 
