Calendly for schedulista

--- a/index.html
+++ b/index.html
@@ -16,24 +16,10 @@
     <h1>
         General Chemistry I &amp; II Tutoring
     </h1>
-<a href='http://ejrtutoring.schedulista.com' target='_blank'>
-    <img alt='Schedule an Online Appointment' height='44px' src='http://www.schedulista.com/assets/schedule_button@2x.png' title='Schedule an Appointment Online'>
-    </a>
-    
-    <iframe 
-        id="schedulista-widget-00" 
-        src="https://www.schedulista.com/schedule/ejrtutoring?mode=widget" 
-        allowtransparency="false" 
-        frameborder="0" 
-        scrolling="no" 
-        width="100%" 
-        height="1200px"
-    ></iframe>
-    <script 
-        id="schedulista-widget-script-00" 
-        type="text/javascript" 
-        src="https://www.schedulista.com/schedule/ejrtutoring/widget.js"
-    ></script>
+<!-- Calendly inline widget begin -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/chemhelp" style="min-width:320px;height:580px;"></div>
+<script type="text/javascript" src="https://calendly.com/assets/external/widget.js"></script>
+<!-- Calendly inline widget end -->
 
     <!-- maxmcd: you probably want this -->
     <script>
