Add main logo spot

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-
+    <img class="logo" src="https://i.imgur.com/DTMN0MY.jpg" alt="Smiley face">
     <h1>
         General Chemistry I &amp; II Tutoring
     </h1>
