--- a/index.html
+++ b/index.html
@@ -10,16 +10,36 @@
 
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
+    <script>
+  function resizeIframe(obj) {
+    obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
+  }
+</script>
 </head>
 <body>
     <img class="logo" src="https://i.imgur.com/DTMN0MY.jpg" alt="Smiley face">
     <h1>
         General Chemistry I &amp; II Tutoring
     </h1>
-<!-- Calendly inline widget begin -->
-<div class="calendly-inline-widget" data-url="https://calendly.com/chemhelp" style="min-width:320px;height:580px;"></div>
-<script type="text/javascript" src="https://calendly.com/assets/external/widget.js"></script>
-<!-- Calendly inline widget end -->
+<a href='http://ejrtutoring.schedulista.com' target='_blank'>
+    <img alt='Schedule an Online Appointment' height='44px' src='http://www.schedulista.com/assets/schedule_button@2x.png' title='Schedule an Appointment Online'>
+    </a>
+    
+    <iframe 
+        id="schedulista-widget-00" 
+        src="https://www.schedulista.com/schedule/ejrtutoring?mode=widget" 
+        allowtransparency="false" 
+        frameborder="0" 
+        scrolling="no" 
+        width="80%" 
+        scrolling="no"
+        onload="resizeIframe(this)"
+    ></iframe>
+    <script 
+        id="schedulista-widget-script-00" 
+        type="text/javascript" 
+        src="https://www.schedulista.com/schedule/ejrtutoring/widget.js"
+    ></script>
 
     <!-- maxmcd: you probably want this -->
     <script>
