--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>
         General Chemistry I &amp; II Tutoring
     </h1>
-    
+    <div class="frame">
     <iframe 
         id="schedulista-widget-00" 
         src="https://www.schedulista.com/schedule/ejrtutoring?mode=widget" 
@@ -37,7 +37,7 @@
         type="text/javascript" 
         src="https://www.schedulista.com/schedule/ejrtutoring/widget.js"
     ></script>
-
+    </div>
     <!-- maxmcd: you probably want this -->
     <script>
         window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
