--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>
         General Chemistry I &amp; II Tutoring
     </h1> 
-    <span class="header-links"><a href="#schedule">Schedule</a>__<a href="#contact">Contact</a>__<a href="#about>About</a></span>
+    <span class="header-links"><a href="#schedule">Schedule</a>__<a href="#contact">Contact</a>__<a href="#about">About</a></span>
     <div class="frame" id="schedule"><h2>Schedule</h2>
     <iframe 
         id="schedulista-widget-00" 
