--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>
         General Chemistry I &amp; II Tutoring
     </h1> 
-    <span class="header-links"><a href="#schedule">Schedule</a>__<a href="#contact">Contact</a>__<a href="#about">About</a></span>
+    <span class="header-links"><a href="#schedule">Schedule</a>--<a href="#about">About</a>--<a href="#contact">Contact</a></span>
     <div class="frame" id="schedule"><h2>Schedule</h2>
     <iframe 
         id="schedulista-widget-00" 
@@ -38,9 +38,9 @@
         src="https://www.schedulista.com/schedule/ejrtutoring/widget.js"
     ></script>
     </div>
+    <div id="contact"><h2>Contact</h2></div>
     <div id="about"><h2>About</h2>
     </div>
-    <div id="contact"><h2>Contact</h2></div>
     <!-- maxmcd: you probably want this -->
     <script>
         window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
