--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="width=device-width,initial-scale=1" name=viewport>
 
   <link rel="stylesheet" href="/css/bootstrap.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style.css?1">
   <script>
   function resizeIframe(obj) {
     obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
