--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <!-- <meta name="viewport" content="user-scalable=no,width=500"> -->
   <meta content="width=device-width,initial-scale=1" name=viewport>
 
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
   <link rel="stylesheet" href="/css/bootstrap.css">
-  <link rel="stylesheet" href="/css/style.css?1">
+  <link rel="stylesheet" href="/css/style.css?2">
   <script>
   function resizeIframe(obj) {
     obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
