--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
   <link rel="stylesheet" href="/css/bootstrap.css">
   <link rel="stylesheet" href="/css/style.css?2">
+  <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
+
+  <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
+
 </head>
 <body>
   <div class="green-section section">
@@ -20,7 +24,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="logo-container">
-            <img src="/images/logo.png" alt="">
+            <img src="/images/logo.png" alt="" style="width:150px;">
           </div>
           <h1>
             Chemistry &amp; Math Tutoring
@@ -80,17 +84,11 @@
           </ul>
         </div>
       </div>
-      <div class="row">
+      <div class="row center">
         <div class="col-sm-8 col-sm-offset-2">
-          <p style="margin:0px;">
-<!-- Calendly link widget begin -->
-<link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
-<script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
-<a href="" onclick="Calendly.showPopupWidget('https://calendly.com/chemhelp');return false;">
-  <button class="btn btn-lg" style="background-color:#000; color:#fff ; padding: 15px 30px;">Schedule Now</button>
-            </a>
-<!-- Calendly link widget end -->
-          </p>
+          <a href="" onclick="Calendly.showPopupWidget('https://calendly.com/chemhelp');return false;">
+            <button class="btn btn-lg" style="background-color:#000; color:#fff ; padding: 15px 30px;">Schedule Now</button>
+          </a>
         </div>
       </div>
     </div>
@@ -125,11 +123,11 @@
               <form method="POST" action="https://formspree.io/ejr2167@columbia.edu">
                 <div class="form-group">
                   <label for="name">Name</label>
-                  <input type="name" name="name" placeholder="Name" class="form-control">
+                  <input type="name" name="name" placeholder="Name" class="form-control" required>
                 </div>
                 <div class="form-group">
                   <label for="email">Email</label>
-                  <input type="email" name="email" placeholder="Email" class="form-control">
+                  <input type="email" name="email" placeholder="Email" class="form-control" required>
                 </div>
                 <div class="form-group">
                   <label for="phone">Phone</label>
