--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="container">
       <div class="row center">
         <div class="col-sm-12">
-          <h2>Teaching in all areas of general math and chemistry including:</h2>
+          <h2>Teaching in all areas of general math and chemistry, including:</h2>
         </div>
       </div>
       <div class="row">
