Trying to fix form

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Eric James Robinson Tutoring</title>
   <meta name="description" content="">
+  <meta name="referrer" content="origin">
 
   <!-- <meta name="viewport" content="user-scalable=no,width=500"> -->
   <meta content="width=device-width,initial-scale=1" name=viewport>
@@ -129,7 +130,7 @@
           <h2 class="center">Contact</h2>
           <div class="panel">
             <div class="panel-body">
-              <form method="POST" action="http://formspree.io/ejr2167@columbia.edu">
+              <form method="POST" action="https://formspree.io/ejr2167@columbia.edu">
                 <div class="form-group">
                   <label for="name">Name</label>
                   <input type="name" name="name" placeholder="Name" class="form-control">
