--- a/index.html
+++ b/index.html
@@ -57,13 +57,7 @@
             and/or Math topics.
           </p>
           <p>
-            <a href='http://ejrtutoring.schedulista.com' target='_blank'>
-              <img alt='Schedule an Online Appointment' 
-                height='44px' 
-                src='http://www.schedulista.com/assets/schedule_button@2x.png'
-                title='Schedule an Appointment Online'
-              >
-            </a>
+            <iframe id="schedulista-widget-00" src="https://www.schedulista.com/schedule/ejrtutoring?mode=widget" allowtransparency="true" frameborder="0" scrolling="no" width="100%" height="900px"></iframe><script id="schedulista-widget-script-00" type="text/javascript" src="https://www.schedulista.com/schedule/ejrtutoring/widget.js"></script>
           </p>
         </div>
       </div>
