Calendly for Schedulista test

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
             and/or Math topics.
           </p>
           <p>
-            <iframe id="schedulista-widget-00" src="https://www.schedulista.com/schedule/ejrtutoring?mode=widget" allowtransparency="true" frameborder="0" scrolling="no" width="100%" height="900px"></iframe><script id="schedulista-widget-script-00" type="text/javascript" src="https://www.schedulista.com/schedule/ejrtutoring/widget.js"></script>
+            <!-- Calendly inline widget begin -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/chemhelp" style="min-width:320px;height:580px;"></div>
+<script type="text/javascript" src="https://calendly.com/assets/external/widget.js"></script>
+<!-- Calendly inline widget end -->
           </p>
         </div>
       </div>
