--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
             and/or Math topics.
           </p>
           <p>
-            <!-- Calendly inline widget begin -->
-<div class="calendly-inline-widget" data-url="https://calendly.com/chemhelp" style="min-width:320px;height:650px;"></div>
-<script type="text/javascript" src="https://calendly.com/assets/external/widget.js"></script>
-<!-- Calendly inline widget end -->
+<!-- Calendly badge widget begin -->
+<link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
+<script type="text/javascript">Calendly.initBadgeWidget({url: 'https://calendly.com/chemhelp', text: 'Schedule time with me', color: '#4d5055', branding: false});</script>
+<!-- Calendly badge widget end -->
           </p>
         </div>
       </div>
