--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
             and/or Math topics.
           </p>
           <p>
-<!-- Calendly badge widget begin -->
+<!-- Calendly link widget begin -->
 <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
 <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
-<script type="text/javascript">Calendly.initBadgeWidget({url: 'https://calendly.com/chemhelp', text: 'Schedule time with me', color: '#4d5055', branding: false});</script>
-<!-- Calendly badge widget end -->
+<a href="" onclick="Calendly.showPopupWidget('https://calendly.com/chemhelp');return false;"><button>Schedule Now</button></a>
+<!-- Calendly link widget end -->
           </p>
         </div>
       </div>
