--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <!-- Calendly link widget begin -->
 <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
 <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
-<a href="" onclick="Calendly.showPopupWidget('https://calendly.com/chemhelp');return false;"><button>Schedule Now</button></a>
+<a href="" onclick="Calendly.showPopupWidget('https://calendly.com/chemhelp');return false;"><button class="btn btn-elegant">Schedule Now</button></a>
 <!-- Calendly link widget end -->
           </p>
         </div>
