--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
 <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
 <a href="" onclick="Calendly.showPopupWidget('https://calendly.com/chemhelp');return false;">
-  <button class="btn btn-elegant btn-rounded waves-effect btn-large">Schedule Now</button>
+  <button class="btn btn-primary btn-lg">Schedule Now</button>
             </a>
 <!-- Calendly link widget end -->
           </p>
