--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
   <link rel="stylesheet" href="/css/bootstrap.css">
   <link rel="stylesheet" href="/css/style.css?2">
-  <script>
-  function resizeIframe(obj) {
-    obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
-  }
-</script>
 </head>
 <body>
   <div class="green-section section">
@@ -61,7 +56,7 @@
 <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
 <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
 <a href="" onclick="Calendly.showPopupWidget('https://calendly.com/chemhelp');return false;">
-  <button class="btn btn-lg button-purple">Schedule Now</button>
+  <button class="btn btn-lg button-purple" style="background-color:#BCA3C9">Schedule Now</button>
             </a>
 <!-- Calendly link widget end -->
           </p>
