--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
 <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
 <a href="" onclick="Calendly.showPopupWidget('https://calendly.com/chemhelp');return false;">
-  <button class="btn btn-lg button-purple" style="background-color:#BCA3C9">Schedule Now</button>
+  <button class="btn btn-lg button-purple" style="background-color:#BCA3C9; color:#eeeeee">Schedule Now</button>
             </a>
 <!-- Calendly link widget end -->
           </p>
