--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@
           <div class="logo-container">
             <img src="/images/logo.png" alt="">
           </div>
+          <h1>
+            Chemistry &amp; Math Tutoring
+          </h1>
+          <em>
+            Personalized one-on-one or pair tutoring
+            sessions in General Chemistry I &amp; II 
+            and/or Math topics.
+          </em>
           <div class="hero-links">
-            <a href="#schedule">
+            <a href="" onclick="Calendly.showPopupWidget('https://calendly.com/chemhelp');return false;">
               Schedule
             </a>
             -
@@ -39,32 +47,7 @@
       </div>
     </div>    
   </div>
-  <div class="white-section section" id="schedule">
-    <div class="container center jumbo-container">
-      <div class="row">
-        <div class="col-sm-8 col-sm-offset-2">
-          <h1>
-            Chemistry &amp; Math Tutoring
-          </h1>
-          <p>
-            Personalized one-on-one or pair tutoring
-            sessions in General Chemistry I &amp; II 
-            and/or Math topics.
-          </p>
-          <p>
-<!-- Calendly link widget begin -->
-<link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
-<script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
-<a href="" onclick="Calendly.showPopupWidget('https://calendly.com/chemhelp');return false;">
-  <button class="btn btn-lg" style="background-color:#000; color:#fff">Schedule Now</button>
-            </a>
-<!-- Calendly link widget end -->
-          </p>
-        </div>
-      </div>
-    </div>        
-  </div>
-  <div class="green-section section">
+  <div class="white-section section">
     <div class="container">
       <div class="row center">
         <div class="col-sm-12">
@@ -97,17 +80,31 @@
           </ul>
         </div>
       </div>
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <p style="margin:0px;">
+<!-- Calendly link widget begin -->
+<link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
+<a href="" onclick="Calendly.showPopupWidget('https://calendly.com/chemhelp');return false;">
+  <button class="btn btn-lg" style="background-color:#000; color:#fff ; padding: 15px 30px;">Schedule Now</button>
+            </a>
+<!-- Calendly link widget end -->
+          </p>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="section white-section" id="about">
+  <div class="section green-section" id="about">
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
           <h2>About Me:</h2>
           <p>
             My name is Eric Robinson, and I graduated from Williams College 
-            in 2013 with a BA in Mathematics. While at Williams I focused 
-            in Operations Research, Real Analysis, and Applied Linear Algebra. 
+            in 2013 with a BA in Mathematics. While at Williams I worked as a
+            TA in the math and computer science departments while taking classes
+            focused in Operations Research, Real Analysis, and Applied Linear Algebra. 
             Upon graduation I worked at Epic, a healthcare software company, 
             as an interface developer and project manager. I came to Columbia 
             in 2016 to complete the pre-requisites for medical school in the 
@@ -118,7 +115,7 @@
     </div>
   </div>
   
-  <div class="section green-section" id="contact">
+  <div class="section white-section" id="contact">
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
