--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="logo-container">
-            <img src="/images/logo.png" alt="">
+            <img src="/images/logo.png" alt="" style="width:150px;">
           </div>
           <h1>
             Chemistry &amp; Math Tutoring
