--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="/css/bootstrap.css">
   <link rel="stylesheet" href="/css/style.css?2">
   <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
+  <link rel="icon" type="image/png" href="/images/favicon.png">
 
   <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
 
