--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
             as an interface developer and project manager. I came to Columbia 
             in 2016 to complete the pre-requisites for medical school in the 
             Post-bac program, and I plan to enter medical school in 2018.
+            I currently work as a machine learning programmer in cancer pathology
+            research at NYU Langone School of Medicine.
           </p>
         </div>
       </div>
