Reduce spacing for bullet points

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <li>Properties of Solutions</li>
             <li>Chemical Equilibria</li>
             <li>Acids and Bases</li>
-            <li>Energy, Enthalpy, and Thermo</li>
+            <li>Thermodynamics</li>
             <li>Kinetics</li>
           </ul>
         </div>
@@ -79,7 +79,7 @@
           <ul>
             <li>Functions and Models</li>
             <li>Limits and Derivatives</li>
-            <li>Differentiation Rules &amp; Applications</li>
+            <li>Differentiation Rules</li>
             <li>Techniques of Integration</li>
             <li>Infinite Sequences &amp; Series</li>
           </ul>
