--- a/index.html
+++ b/index.html
@@ -1,160 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Eric James Robinson Tutoring</title>
-  <meta name="description" content="">
-  <meta name="referrer" content="origin">
-
-  <!-- <meta name="viewport" content="user-scalable=no,width=500"> -->
-  <meta content="width=device-width,initial-scale=1" name=viewport>
-
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
-  <link rel="stylesheet" href="/css/bootstrap.css">
-  <link rel="stylesheet" href="/css/style.css?2">
-  <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
-  <link rel="icon" type="image/png" href="/images/favicon.png">
-
-  <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script>
-
+    <meta charset="UTF-8">
+    <title></title>
+    <style>
+        body {
+            margin: 0px;
+        }
+        div {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            background-image: url(./trav.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
+            animation-name: example;
+            animation-duration: 30s;
+        }
+        @keyframes example {
+            from {
+                transform: scale(1);
+                left: 0px;
+            }
+            to {
+                transform: scale(2);
+                left: 300px;
+            }
+        }
+        audio {
+            display: none;
+        }
+    </style>
 </head>
 <body>
-  <div class="green-section section">
-    <div class="container center">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="logo-container">
-            <img src="/images/logo.png" alt="" style="width:150px;">
-          </div>
-          <h1>
-            Chemistry &amp; Math Tutoring
-          </h1>
-          <em>
-            Personalized one-on-one or pair tutoring
-            sessions in General Chemistry I &amp; II 
-            and/or Math topics.
-          </em>
-          <div class="hero-links">
-            <a href="" onclick="Calendly.showPopupWidget('https://calendly.com/chemhelp');return false;">
-              Schedule
-            </a>
-            -
-            <a href="#about">
-              About
-            </a>
-            -
-            <a href="#contact">
-              Contact
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>    
-  </div>
-  <div class="white-section section">
-    <div class="container">
-      <div class="row center">
-        <div class="col-sm-12">
-          <h2>Teaching in all areas of general math and chemistry, including:</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2 col-lg-3 col-lg-offset-3">
-          <div class="center list-image-header">
-            <img src="/images/atom.png" alt="">
-          </div>
-          <ul>
-            <li>Properties of Solutions</li>
-            <li>Chemical Equilibria</li>
-            <li>Acids and Bases</li>
-            <li>Thermodynamics</li>
-            <li>Kinetics</li>
-          </ul>
-        </div>
-        <div class="col-sm-5 col-md-4 col-lg-3">
-          <div class="center list-image-header">
-            <img src="/images/pi.png" alt="">
-          </div>
-          <ul>
-            <li>Functions and Models</li>
-            <li>Limits and Derivatives</li>
-            <li>Differentiation Rules</li>
-            <li>Techniques of Integration</li>
-            <li>Infinite Sequences &amp; Series</li>
-          </ul>
-        </div>
-      </div>
-      <div class="row center">
-        <div class="col-sm-8 col-sm-offset-2">
-          <a href="" onclick="Calendly.showPopupWidget('https://calendly.com/chemhelp');return false;">
-            <button class="btn btn-lg" style="background-color:#000; color:#fff ; padding: 15px 30px;">Schedule Now</button>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="section green-section" id="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-8 col-sm-offset-2">
-          <h2>About Me:</h2>
-          <p>
-            My name is Eric Robinson, and I graduated from Williams College 
-            in 2013 with a BA in Mathematics. While at Williams I worked as a
-            TA in the math and computer science departments while taking classes
-            focused in Operations Research, Real Analysis, and Applied Linear Algebra. 
-            Upon graduation I worked at Epic, a healthcare software company, 
-            as an interface developer and project manager. I came to Columbia 
-            in 2016 to complete the pre-requisites for medical school in the 
-            Post-bac program, and I plan to enter medical school in 2018.
-            I currently work as a machine learning programmer in cancer pathology
-            research at NYU Langone School of Medicine.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-  <div class="section white-section" id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6 col-sm-offset-3">
-          <h2 class="center">Contact</h2>
-          <div class="panel">
-            <div class="panel-body">
-              <form method="POST" action="https://formspree.io/ejr2167@columbia.edu">
-                <div class="form-group">
-                  <label for="name">Name</label>
-                  <input type="name" name="name" placeholder="Name" class="form-control" required>
-                </div>
-                <div class="form-group">
-                  <label for="email">Email</label>
-                  <input type="email" name="email" placeholder="Email" class="form-control" required>
-                </div>
-                <div class="form-group">
-                  <label for="phone">Phone</label>
-                  <input type="phone" name="phone" placeholder="Phone" class="form-control">
-                </div>
-                <div class="form-group">
-                  <label for="message">Message</label>
-                  <textarea type="message" name="message" 
-                    placeholder="Message" class="form-control"></textarea>
-                </div>
-                <button type="submit" class="btn btn-default btn-block">Send</button>
-              </form>              
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script>
-    window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-    ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
-  </script>
-
-  <script src="https://www.google-analytics.com/analytics.js" async defer>
-    </script>
+    <audio controls autoplay>
+      <source src="./notaplay_short.mp3" type="audio/mpeg">
+    </audio>
+    <div></div>
 </body>
 </html>
