--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <audio controls autoplay>
-      <source src="./notaplay_short.mp3" type="audio/mpeg">
+      <source src="./notaplaya_short.mp3" type="audio/mpeg">
     </audio>
     <div></div>
 </body>
