--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             width: 100%;
             height: 100%;
             position: absolute;
-            background-image: url(./trav.jpg);
+            background-image: url(./trav2.jpg);
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -26,7 +26,7 @@
             }
             to {
                 transform: scale(2);
-                left: 300px;
+                left: 30%;
             }
         }
         audio {
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <audio controls autoplay>
+    <audio controls autoplay loop>
       <source src="./notaplaya_short.mp3" type="audio/mpeg">
     </audio>
     <div></div>
