--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 left: 0px;
             }
             to {
-                transform: scale(2);
+                transform: scale(4);
                 left: 20%;
             }
         }
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <audio controls autoplay loop>
+    <audio autoplay loop>
       <source src="./notaplaya_short.mp3" type="audio/mpeg">
     </audio>
     <div></div>
