--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             width: 100%;
             height: 100%;
             position: absolute;
-            background-image: url(./trav.jpg);
+            background-image: url(./trav2.jpg);
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
