--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             width: 100%;
             height: 100%;
             position: absolute;
-            background-image: url(./trav2.jpg);
+            background-image: url(./trav3.jpg);
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -35,9 +35,8 @@
     </style>
 </head>
 <body>
-    <audio autoplay loop>
-      <source src="./notaplaya_short.mp3" type="audio/mpeg">
-    </audio>
+<iframe src="./notaplaya_short.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+   </iframe> 
     <div></div>
 </body>
 </html>
