--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             }
             to {
                 transform: scale(4);
-                left: 20%;
+                right: 20%;
+                top: 20%;
             }
         }
         audio {
