--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             display: none;
         }
     </style>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
 <iframe src="./notaplaya_short.mp3" allow="autoplay" style="display:none" id="iframeAudio">
