--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            background-position: center;
+            background-position: right top;
             animation-name: example;
             animation-duration: 30s;
         }
