--- a/index.html
+++ b/index.html
@@ -1,41 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
-    <style>
-        body {
-            margin: 0px;
-        }
-        div {
-            height: 100%;
-            position: absolute;
-            background-image: url(./trav3.jpg);
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: right top;
-        }
-        @keyframes example {
-            from {
-                transform: scale(1);
-                left: 0px;
-            }
-            to {
-                transform: scale(2);
-                right: 30%;
-                top: 30%;
-            }
-        }
-        audio {
-            display: none;
-        }
-    </style>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<meta charset="UTF-8">
+	<title>Coming Soon</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<iframe src="./notaplaya_short.mp3" allow="autoplay" style="display:none" id="iframeAudio">
-   </iframe> 
-    <div id="main" ></div>
-</body>
+<div class="center"><h3>Keep Bangin</h3>
+</div></body>
 </html>
