--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
 <div class="center"><h3>Keep Bangin</h3>
+	<iframe src="./notaplaya_short.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+	</iframe>
 </div></body>
 </html>
