--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div class="center"><h3>Keep Bangin</h3>
+<div class="center"><h3>Still Bangin</h3>
 	<iframe src="./notaplaya_short.mp3" allow="autoplay" style="display:none" id="iframeAudio">
 	</iframe>
 </div></body>
