--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <div class "container">
     <div class "picture">
-        <img alt="snowballAppear" id="snowballAppear" style="display: none" src="./head.png">
+        <img alt="snowballAppear" id="snowballAppear" style="display: none" src="./head_empty.png">
     </div>
 </div>
 
