--- a/index.html
+++ b/index.html
@@ -155,10 +155,11 @@ requestAnimationFrame(loop);
 </div>
 
 <div class="center">
-	<div class="block">
+	<div class="block" style="background-color: yellowgreen">
 		<h3>Who wore it better?</h3>
 		<img class="site-photo" src="./catbangs.jpg">
 		<img class="site-photo" src="./beegbangs.png">
+		<img class="site-photo" src="./mb1.jpeg">
 	</div>
 </div>
 
@@ -167,6 +168,18 @@ requestAnimationFrame(loop);
 <div class="center">
 	<div class="block">
 		<img class="site-photo" src="./idontgiveasip.jpg">
+	</div>
+</div>
+
+<div class="center">
+	<div class="block">
+		<h2>BEEG's advice for y'all:</h2>
+		<ul>
+			<li>Trash</li>
+			<li>The</li>
+			<li>Haters</li>
+			<li>WINE!!</li>
+		</ul>
 	</div>
 </div>
 
