--- a/index.html
+++ b/index.html
@@ -183,5 +183,12 @@ requestAnimationFrame(loop);
 	</div>
 </div>
 
+<div class="center">
+	<div class="block">
+	<a href="https://www.easycounter.com/">
+<img src="https://www.easycounter.com/counter.php?truegold"
+border="0" alt="Hit Counter"></a>
+	</div>
+</div>
 </html>
 
