--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <table border="3" width="900" cellspacing="4" cellpadding="0" height="168" align="center">
 	<tbody><tr>
 		<td valign="top" width="760">
-		<img border="0" width="325" height="129" src="./profphoto.png" align="left"><!--[endif]--><p align="justify" style="color:white;">
+		<img border="0" width="325" height="129" src="./profphoto.png" align="left"><p align="justify" style="color:white;">
 		Welcome to Beeg Davus' WEbsite! This site is to recognize 
 		da best RN on tha waaaaard!!!
 	Isn't it kewl??? LOL!</p></td>
@@ -180,14 +180,25 @@ requestAnimationFrame(loop);
 			<li>Haters</li>
 			<li>WINE!!</li>
 		</ul>
+
+	</div>
+</div>
+
+<div class="center">
+	<div class="tj-list-container">
+		<h3> Professional TJ Recs</h3>
+	<span><img src="./tjnana.jpg" class="tj-pic"></span>
+		<ol class="tj-list">
+			<li>Oooo the Gorgonzola and because of the cheese
+And the risotto also because of the lemon cheesy sauce and the taquito because they taste good and the chili lime chicken patty because it’s delicious</li>
+		</ol>
 	</div>
 </div>
 
 <div class="center">
 	<div class="block">
 	<a href="https://www.easycounter.com/">
-<img src="https://www.easycounter.com/counter.php?truegold"
-border="0" alt="Hit Counter"></a>
+		<img src="https://www.easycounter.com/counter.php?truegold" border="0" alt="Hit Counter"></a>
 	</div>
 </div>
 </html>
