--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
 <div>
 	<h3 align="center">Click <a href="https://www.daisyfoundation.org/daisy-in-training/honorees/bridget-davis" target="_blank">HERE</a> to see my DAISY!</h3>
 </div>
+
+<div class="center">
+	<div class="ppl-list">
+	<h3>Famous Ppl I'd like to meat:</h3>
+	<ol>
+		<li>THe zomebie kid that likes turtles</li>
+		<li>OBAMA</li>
+		<li>Maybe... you!! JK LOL</li>
+
+	</ol>
+</div>	
+</div>
+
 <div align="center">
 <div class="snake" >
 <canvas width="400" height="400" id="game" ></canvas>
